Avoid image overflow

--- a/microservices/www2/src/components/ImageCarousel/ImageCarousel.scss
+++ b/microservices/www2/src/components/ImageCarousel/ImageCarousel.scss
@@ -105,7 +105,8 @@
     .current-image {
       flex-basis: 60%;
       flex-shrink: 0;
-      margin-right: 16px;
+      padding-right: 16px;
+      box-sizing: border-box;
     }
     .content{
       flex-basis: 40%;
